# ProxyVotingSimulation

./: .gitignore  Cargo.toml  file_tester.py
.githooks/: pre-commit
.github/workflows/: clippy_check.yml
src/: agent.rs  data_row.rs  degenerified_distribution.rs  delegation.rs  distribution.rs  has_id.rs  main.rs  preference_distribution.rs  proxy.rs  ranking.rs  rankings.rs  rng_locked_distribution.rs  truth_estimator.rs
src/agent_utils/: generate_agents.rs  generate_estimates.rs  mod.rs
src/coordination_mechanisms/: coordination_mechanism.rs  expert_candidate_coordination_mechanism.rs  expert_coordination_mechanism.rs  mean_candidate_coordination_mechanism.rs  mean_coordination_mechanism.rs  median_candidate_coordination_mechanism.rs  median_coordination_mechanism.rs  mod.rs
src/delegation_mechanisms/: closest_mechanism.rs  closest_n_mechanism.rs  delegation_mechanism.rs  mod.rs
src/utils/: average_truth_estimators.rs  calculate_distance.rs  mod.rs  named_tuple.rs  named_value.rs  save_to_file.rs  sort_by_distance.rs  sum_rankings_weights.rs
src/voting_mechanisms/: mean_voting_mechanism.rs  median_voting_mechanism.rs  midrange_voting_mechanism.rs  mod.rs  voting_mechanism.rs
src/voting_mechanisms/average/: instant_runoff_mechanism.rs  mean_mechanism.rs  mod.rs  ranked_choice_mechanism.rs  weighted_instant_runoff_mechanism.rs  weightless_average_all_mechanism.rs  weightless_average_proxies_mechanism.rs
src/voting_mechanisms/candidate/: instant_runoff_mechanism.rs  median_mechanism.rs  mod.rs  plurality_mechanism.rs  weighted_instant_runoff_mechanism.rs
