[package]
name = "proxy_voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrow = { version = "30.0.1", features = ["ipc"] }
chrono="0.4.23"
crossbeam="0.8.2"
indicatif="0.17.3"
itertools= "0.10.5"
ordered-float = "3.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
