[package]
name = "proxy_voting"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrow = { version = "37.0.0", features = ["ipc"] }
indicatif="0.17.3"
itertools= "0.10.5"
rand = "0.8.5"
rand_distr = "0.4.3"
